--- a/src/app/authors/authors.component.html
+++ b/src/app/authors/authors.component.html
@@ -11,7 +11,7 @@
       <button
         mat-raised-button
         color="warn"
-        routerLink="/authors/{{ author.id }}"
+        routerLink="{{ author.id }}"
       >Author's Page</button>
  
       <div class="books-wrap" *ngIf="author.works">
